fix header z-index

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -5,7 +5,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 20;
   height: 3.8rem;
   box-shadow: $box-shadow;
   background: $bg-img;
@@ -328,8 +328,7 @@ header {
   padding: 2rem;
   padding-right: 1.5rem;
   background-color: rgb(8, 13, 22);
-  box-shadow: inset 0 5px 5px -6px #5f5da8,
-    0px 0px 2px #5f5da8;
+  box-shadow: 0px 2px 20px 0.1px rgba(68, 60, 82, 0.3);
   border-bottom-left-radius: 10px;
   font-size: 1.2rem;
   transform: translateX(100%);
